# erbloom

./: rebar.config
crates/bloom/: Cargo.toml
crates/bloom/src/: container.rs  lib.rs  nif.rs  options.rs
crates/bloom/src/filter/: bloom.rs  forgetful.rs
src/: bloom.erl  bloom_nif.erl
